# nano-rl

./: .gitignore  README.md  pyproject.toml
configs/debug/: infer.toml  orch.toml  rl.toml  sft.toml
configs/debug/sft/: train.toml
configs/reverse_text/: README.md
configs/reverse_text/rl/: infer.toml  orch.toml  train.toml
configs/reverse_text/sft/: train.toml
src/nano_rl/inference/: config.py  server.py  worker.py
src/nano_rl/orchestrator/: __init__.py  advantage.py  config.py  orchestrator.py  scheduler.py  utils.py
src/nano_rl/trainer/: ckpt.py  config.py  model.py  optim.py  parallel_dims.py  perf.py  scheduler.py  utils.py  weights.py  world.py
src/nano_rl/trainer/rl/: config.py  data.py  loss.py  packer.py  train.py
src/nano_rl/trainer/rl/broadcast/: __init__.py  base.py  filesystem.py
src/nano_rl/trainer/sft/: config.py  data.py  train.py
src/nano_rl/transport/: __init__.py  base.py  config.py  filesystem.py  types.py
src/nano_rl/utils/: client.py  config.py  logger.py  pathing.py  pydantic_config.py  utils.py  validation.py  vf.py
src/nano_rl/utils/monitor/: __init__.py  base.py
tests/: test_filesystem.py
tests/configs/: test_sft_config.py
tests/integration/: conftest.py  test_filesystem.py  test_orchestrator.py  test_vf.py
tests/unit/: test_advantage.py  test_packer.py  test_parallel_dims.py  test_rl_data.py
